[gd_scene load_steps=5 format=3 uid="uid://bvri2s7omd177"]

[ext_resource type="Script" uid="uid://dclddf5kyf6lh" path="res://scripts/grenade_object.gd" id="1_enapi"]
[ext_resource type="Texture2D" uid="uid://uwm0khfgsj6e" path="res://addons/guns/grenade.png" id="1_xaxly"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s6xkn"]
radius = 8.51469

[sub_resource type="CircleShape2D" id="CircleShape2D_odow8"]
radius = 50.0

[node name="GrenadeObject" type="StaticBody2D"]
script = ExtResource("1_enapi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.5)
shape = SubResource("CircleShape2D_s6xkn")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_xaxly")

[node name="ExplosionArea" type="Area2D" parent="."]
process_mode = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource("CircleShape2D_odow8")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="ExplosionArea" to="." method="_on_explosion_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
